added the colour hints to the keyboard

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+.undiscovered {
+  background-color: white;
+}
+
+.not-in-word {
+  background-color: grey;
+}
+
+.almost-hint {
+  background-color: yellow;
+}
+
+.correct {
+  background-color: green;
+}
