--- a/src/App.css
+++ b/src/App.css
@@ -69,4 +69,13 @@
   border-radius: 0.4em;
   margin: 2px;
   font-family: Noto-Sans;
+  align-items: center;
+  justify-content: center;
+}
+
+.key-hint {
+  font-size: 12px;
+  position: absolute;
+  text-align: left;
+  transform: translate(-5px, -7px);
 }
