--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: antiquewhite;
+}
+
 .App {
   text-align: center;
 }
@@ -33,18 +37,34 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.board 
+{
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Noto-Sans;
+  border: none;
+  font-size: 2.5em;
+  border-spacing: 5px;
+}
+
+.board-cell {
+  width: 64px; 
+  height: 64px;
+  table-layout: fixed;
+  word-wrap: break-word;
+  border: none;
+  padding: 0;
+  border-radius: 0.2em;
 }
 
 .undiscovered {
   background-color: white;
   border: 2px solid lightgrey   
+}
+
+.entered {
+  background-color: white;
+  border: 2px solid black   
 }
 
 .not-in-word {
@@ -78,4 +98,11 @@
   position: absolute;
   text-align: left;
   transform: translate(-32px, -7px);
+}
+
+.keyboard {
+  position: fixed;
+  bottom: 10px;
+  left: 0;
+  right: 0;
 }
